--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build "paramiko>=2.10.4,<3.0"
+        pip install build
+    - run: pip install "paramiko>=2.10.4,<3.0"
     - name: Build package
       run: python -m build
     - name: Publish package
